--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -120,8 +120,8 @@
     </p>
   </div>
         <div class="card">
-    <img src="christmas-quiz-poster.jpeg" alt="Christmas Quiz at The Lamb Inn Nomansland">
-    <h3>Christmas Quiz</h3>
+    <img src="Lamb New Years Poster.jpg" alt="🎆New years eve 🎆 at The Lamb Inn Nomansland">
+    <h3>New Years Eve</h3>
 
     <p><strong>Tuesday 23/12 – Starts at 7pm</strong></p>
 
