--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -123,17 +123,14 @@
     <img src="Lamb New Years Poster.jpg" alt="🎆New years eve 🎆 at The Lamb Inn Nomansland">
     <h3>New Years Eve</h3>
 
-    <p><strong>Tuesday 23/12 – Starts at 7pm</strong></p>
+    <p><strong>Wednesday 31/12</strong></p>
 
     <p>
-      Join us for a charming festive gathering filled with cheer, including a
-      table dressing competition and a Christmas jumper competition –
-      with prizes to be won!<br><br>
+      We are thrilled to invite you all to our new years eve bash , well be ringing in 2026 in style. 🍸<br><br>
 
-      Hot & cold festive drinks will be available, and the kitchen is
-      open until 9.30pm.<br><br>
+     The drinks will be flowing there’ll party games of fun and prizes to be won and plenty of delicious food.<br><br>
 
-      Book your table now at<br>
+      There’s no where better to be this new years!🎉, so Book your table now at<br>
       <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form"
          target="_blank"
          style="color:#e6d8b5; text-decoration:underline;">
