--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -103,14 +103,17 @@
         <a href="promo-25.html"></a>
       </div>
       <div class="card">
-        <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-        <h3>Wine Wednesday</h3>
-        <p>20% off all bottles of wine, every Wednesday.</p>
+        <img src="pizza-wednesday.jpeg" alt="Pizza Wednesdays">
+        <h3>🍕 WEDNESDAY DEAL! 🍕</h3>
+        </p>Every Wednesday at The Royal Oak, it’s BUY ONE GET ONE FREE on All!</strong> pizzas, so bring a friend, bring your appetite, and enjoy double the pizza for the price of one.
+Perfect midweek treat — don’t miss it! 🍽️✨
+
+See you Wednesday at The Royal Oak! </em></p>
       </div>
     </div>
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../royaloak.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
