--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -105,9 +105,9 @@
       <div class="card">
         <img src="pizza-wednesday.jpeg" alt="Pizza Wednesdays">
         <h3>🍕 WEDNESDAY DEAL! 🍕</h3>
-        </p>Every Wednesday at The Royal Oak, it’s BUY ONE GET ONE FREE on All</strong> pizzas.
+        </p>Every Wednesday at The Royal Oak, it’s BUY ONE GET ONE FREE on ALL PIZZAS</strong>.
         So bring a friend, bring your appetite, and enjoy double the pizza for the price of one.
-        Perfect midweek treat — don’t miss it! 🍽️✨
+        Perfect midweek treat, don’t miss it! 🍽️✨
 
         See you Wednesday at The Royal Oak! </em></p>
       </div>
