--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -110,6 +110,26 @@
         Perfect midweek treat, don’t miss it! 🍽️✨
 
         See you Wednesday at The Royal Oak! </em></p>
+        Book your table now at<br>
+          <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.theroyaloakbeaulieu.co.uk/
+          </a><br>
+          or call <strong>01590 612228</strong>.
+        </p>
+      </div>
+      <div class="card">
+        <img src="fish-fryday.jpeg" alt="Fish & Chips Fridays">
+        <h3>🐟 FRIDAY DEAL! 🐟</h3>
+        </p>Every Friday at The Royal Oak, you can get 2 fish & chips for JUST £30!</strong>.
+        Whether you’re coming in after a walk in the New Forest or chilling in the pub garden, it’s a proper reason to treat yourself (and a mate).
+
+        See you Friday at The Royal Oak! </em></p>
+        Book your table now at<br>
+          <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.theroyaloakbeaulieu.co.uk/
+          </a><br>
+          or call <strong>01590 612228</strong>.
+        </p>
       </div>
     </div>
   </main>
