--- a/Woolpack-images/Events-Promotions/promotions.html
+++ b/Woolpack-images/Events-Promotions/promotions.html
@@ -104,7 +104,21 @@
         <a href="promo-25.html"></a>
       </div>
       
+      <div class="card-grid">
       <div class="card">
+    <img src="after-work-unwind.png" alt="Unwind after work at The Woolpack">
+
+    <h3>After work unwind</h3>
+
+    <p><strong>Monday–Friday, 4pm–6pm</strong></p>
+
+    <p>
+      Clocked out? Time to kick back!
+Join us after work and enjoy an ice-cold Grolsch or Otter Ale for just <strong>£5 a pint</strong>.<br><br>
+
+     Relax, chat, and let the day melt away — you’ve earned it.<br><br>
+        
+        <div class="card">
         <img src="Burger Mondays.jpg" alt="Burger Mondays">
         <h3>Burger Mondays</h3>
         <p>Buy any burger from our menu or specials board and get a free pint every Monday.<br><br>
