--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -115,13 +115,29 @@
         <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
         <a href="promo-25.html"></a>
       </div>
-  <div class="card">
+      <div class="card">
     <img src="Wine Wednesdays.jpg" alt="The Trusty Servant - Wine Wednesday poster">
     <h3>Wine Wednesdays</h3>
 
     <p>
       Buy 2 large glasses of our wine of the month and get the rest of the bottle free!<br>
       <em>Exclusively on Wednesdays!</em>
+    </p>
+      <br>Book your table now at<br>
+     <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            https://www.thetrustyservant.co.uk/
+          </a><br>
+       or call <strong>02380 812137</strong>.
+      </a>
+    </p>
+  </div>
+        <div class="card">
+    <img src="BOGOF-Pizzas-1.png" alt="The Trusty Servant Pizza Mondays">
+    <h3>Pizza Mondays</h3>
+
+    <p>
+      Buy ANY 2 Pizzas for the price of 1!<br>
+      <em>Exclusively on Mondays!</em>
     </p>
       <br>Book your table now at<br>
      <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
