--- a/Trusty-Servant-images/Events-Promotions/events.html
+++ b/Trusty-Servant-images/Events-Promotions/events.html
@@ -97,7 +97,7 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Trusty-Jukebox-Friday.png" alt="🎶Jukebox Friday, every Friday from 6pm till 11pm">
+        <img src="Jukebox-Friday.png" alt="🎶Jukebox Friday, every Friday from 6pm till 11pm">
         <h3>Jukebox Friday</h3>
         <p>
            Jukebox Fridays at The Trusty Servant – Your Music, Your Night! 🍻
