--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -97,12 +97,13 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="NFI-quiz.jpg"
+        <img src="Crimbo-Quiz-2025.png"
         <h3>🧠 Quiz Night at The New Forest Inn</h3>
         <p>
-          Our Quiz Night is returning! Join us for the first one of the season on Friday 26th September! 
-          Guest host with the most Simon Tidby will be joining us as Quiz Master, raising money for The Community Responders a fabulous cause! 
-          Quiz starts at 8pm, £3 per person, max of 6 people per team!<br><br>
+          Join us for another amazing Quiz Night on Friday 19th December! 
+          Quiz starts at 8pm, £3 per person, max of 6 people per team!
+          All proceeds to Love the forest!
+          <br><br>
           Book your table now at<br>
           <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.thenewforestinn.co.uk/
