--- a/home.html
+++ b/home.html
@@ -224,16 +224,13 @@
     <h2>Featured at Every Pub</h2>
     <div class="events-scroll">
 
-      <!-- Festive Feast -->
+      <!-- Vouchers -->
       <div class="event-card">
-        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
-        <h3>Festive Feast</h3>
-        <p><strong>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!</strong></p>
-        <a href="festivefeast.html" class="btn">Find Out More</a>
+        <img src="Country Inns Voucher.jpg" alt="Vouchers">
+        <h3>Gift Vouchers</h3>
+        <p><strong>the perfect gift to spend all year round! These can be purchased and redeemed throughout all of our Country Inns sites!</strong></p>
       </div>
-
      
-
       <!-- Seasonal Specials -->
       <div class="event-card">
         <img src="Seasonal Specials.png" alt="Seasonal Specials">
