--- a/home.html
+++ b/home.html
@@ -228,7 +228,7 @@
       <div class="event-card">
         <img src="Country Inns Voucher.jpg" alt="Vouchers">
         <h3>Gift Vouchers</h3>
-        <p><strong>the perfect gift to spend all year round! These can be purchased and redeemed throughout all of our Country Inns sites!</strong></p>
+        <p><strong>The perfect gift to spend all year round! These can be purchased and redeemed throughout all of our Country Inns sites!</strong></p>
       </div>
      
       <!-- Seasonal Specials -->
