--- a/home.html
+++ b/home.html
@@ -216,7 +216,7 @@
   <!-- PROMO BANNER -->
   <div id="return-offer-banner" class="promo-banner">
     <span id="promo-text">Keep your receipt from any visit during December–March and enjoy <strong>25% OFF your food bill</strong> on your next visit. <em>Monday–Friday only.</em></span>
-    <a href="promo-25.html" class="promo-btn"></a>
+    <a href="promo-25.html" class="btn"> </a>
   </div>
 
   <!-- FEATURED SECTION -->
