--- a/home.html
+++ b/home.html
@@ -230,6 +230,7 @@
         <h3>Gift Vouchers</h3>
         <p><strong>The perfect gift to spend all year round!
           These can be purchased and redeemed throughout all of our Country Inns sites!</strong></p>
+         <p><strong>Terms & Conditions Apply!</strong></p>
       </div>
      
       <!-- Seasonal Specials -->
