--- a/home.html
+++ b/home.html
@@ -50,9 +50,15 @@
       color: white;
       text-align: center;
       padding: 14px 20px;
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       font-weight: bold;
-      display: none;
+    }
+
+    .promo-banner em {
+      font-weight: normal;
+      font-size: 0.95rem;
+      display: block;
+      margin-top: 4px;
     }
 
     .promo-btn {
@@ -114,7 +120,6 @@
       text-decoration: none;
       font-weight: bold;
       margin-bottom: 15px;
-      transition: background-color 0.3s ease;
     }
 
     .event-card .btn:hover {
@@ -188,7 +193,6 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      transition: background-color 0.3s ease;
     }
 
     .about-btn:hover {
@@ -213,109 +217,31 @@
     <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
-  <!-- PROMO BANNER -->
-  <div id="return-offer-banner" class="promo-banner">
-    <span id="promo-text">Keep your receipt from any visit during December–March and enjoy <strong>25% OFF your food bill</strong> on your next visit. <em>Monday–Friday only.</em></span>
-    <a href="promo-25.html" class="btn"> </a>
+  <!-- PROMO BANNER (ALWAYS VISIBLE) -->
+  <div class="promo-banner">
+    Keep your receipt from any visit and enjoy <strong>25% OFF your food bill</strong> on your next visit
+    <a href="promo-25.html" class="promo-btn">Learn More</a>
+    <em>Valid January – March | Monday to Friday only</em>
   </div>
 
   <!-- FEATURED SECTION -->
   <section>
     <h2>Featured at Every Pub</h2>
+
     <div class="events-scroll">
 
-      <!-- Vouchers -->
       <div class="event-card">
-        <img src="Country Inns Voucher.jpg" alt="Vouchers">
-        <h3>Gift Vouchers</h3>
-        <p><strong>The perfect gift to spend all year round!
-          These can be purchased and redeemed throughout all of our Country Inns sites!</strong></p>
-         <p><strong>Terms & Conditions Apply!</strong></p>
+        <img src="25percentoff.jpeg" alt="25% Off Promo">
+        <h3>Follow, Dine, Show – Save 25%</h3>
+        <p><strong>Keep your receipt and enjoy 25% off your food bill on your next visit.</strong></p>
+        <a href="promo-25.html" class="btn">Learn More</a>
       </div>
-     
-      <!-- Seasonal Specials -->
+
       <div class="event-card">
         <img src="Seasonal Specials.png" alt="Seasonal Specials">
         <h3>Seasonal Specials</h3>
         <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
       </div>
-
-      <!-- Sunday Roasts -->
-      <div class="event-card">
-        <img src="Roast Pork.jpg" alt="Sunday Roast">
-        <h3>Sunday Roasts</h3>
-        <p><strong>Join us every Sunday for delicious traditional home-cooked roasts.</strong></p>
-      </div>
-
-      <!-- Dog Friendly -->
-      <div class="event-card">
-        <img src="Dog Friendly.jpg" alt="Dog Friendly">
-        <h3>Dog Friendly</h3>
-        <p><strong>All our pubs welcome you and your four-legged friends.</strong></p>
-      </div>
-
-      <!-- Pouring Quality -->
-      <div class="event-card">
-        <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
-        <h3>Pouring Quality</h3>
-        <p><strong>Enjoy our fine local ales and carefully selected wines.</strong></p>
-      </div>
-
-      <!-- Local Partners -->
-      <div class="event-card">
-        <img src="proudly local.png" alt="Proudly Local">
-        <h3>Proudly Local</h3>
-        <p><strong>We proudly support local producers across the New Forest.</strong></p>
-        <a href="local.html" class="btn">Discover Partners</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- PUB GRID -->
-  <section>
-    <h2>Explore Our Pub Family</h2>
-    <div class="pubs-grid">
-
-      <a class="pub-tile" href="boldforester.html">
-        <img src="bold-forester-images/Restaurant Images/boldforestermain.jpg" alt="The Bold Forester">
-        <span>The Bold Forester</span>
-      </a>
-
-      <a class="pub-tile" href="lambinn.html">
-        <img src="Lamb-Inn-images/LambInn.jpg" alt="The Lamb Inn">
-        <span>The Lamb Inn</span>
-      </a>
-
-      <a class="pub-tile" href="royaloak.html">
-        <img src="Royal-Oak-images/The Royal Oak.jpeg" alt="The Royal Oak">
-        <span>The Royal Oak</span>
-      </a>
-
-      <a class="pub-tile" href="woolpack.html">
-        <img src="Woolpack-images/Woolpack.jpg" alt="The Woolpack">
-        <span>The Woolpack</span>
-      </a>
-
-      <a class="pub-tile" href="fightingcocks.html">
-        <img src="Fighting-Cocks-images/fighting-coq-scaled.jpg" alt="The Fighting Cocks">
-        <span>The Fighting Cocks</span>
-      </a>
-
-      <a class="pub-tile" href="trustyservant.html">
-        <img src="Trusty-Servant-images/Trusty.jpg" alt="The Trusty Servant">
-        <span>The Trusty Servant</span>
-      </a>
-
-      <a class="pub-tile" href="newforestinn.html">
-        <img src="New-Forest-Inn-images/NFI.jpg" alt="The New Forest Inn">
-        <span>The New Forest Inn</span>
-      </a>
-
-      <a class="pub-tile" href="find-us.html">
-        <img src="find us.png" alt="Find our nearest Pub">
-        <span>Find Our Nearest Pub</span>
-      </a>
 
     </div>
   </section>
@@ -323,7 +249,11 @@
   <!-- ABOUT SECTION -->
   <section class="about-banner">
     <h2>About Country Inns</h2>
-    <p>Country Inns is a family of traditional pubs in the New Forest, each with its own character but sharing a passion for great food, local produce, and warm hospitality.</p>
+    <p>
+      Country Inns is a family of traditional pubs in the New Forest,
+      each with its own character but sharing a passion for great food,
+      local produce, and warm hospitality.
+    </p>
     <a href="about.html" class="about-btn">Read More</a>
   </section>
 
@@ -331,21 +261,6 @@
   <footer>
     <p>&copy; 2025 Country Inns | Proudly serving the New Forest</p>
   </footer>
-
-  <!-- PROMO SCRIPT -->
-  <script>
-    (function() {
-      const today = new Date();
-      const month = today.getMonth() + 1; // 1–12
-      const day = today.getDay(); // 0 Sun–6 Sat
-      const banner = document.getElementById('return-offer-banner');
-
-      // Show only Dec–Mar AND Mon–Fri
-      if ((month === 12 || month === 1 || month === 2 || month === 3) && day >= 1 && day <= 5) {
-        banner.style.display = 'block';
-      }
-    })();
-  </script>
 
 </body>
 </html>
