--- a/home.html
+++ b/home.html
@@ -226,24 +226,60 @@
 
   <!-- FEATURED SECTION -->
   <section>
-    <h2>Featured at Every Pub</h2>
+    <!-- Featured at Every Pub -->
+<section>
+  <h2>Featured at Every Pub</h2>
 
-    <div class="events-scroll">
+  <div class="events-scroll">
 
-      <div class="event-card">
-        <img src="25percentoff.jpeg" alt="25% Off Promo">
-        <h3>Follow, Dine, Show – Save 25%</h3>
-        <p><strong>Keep your receipt and enjoy 25% off your food bill on your next visit.</strong></p>
-        <a href="promo-25.html" class="btn">Learn More</a>
-      </div>
-
-      <div class="event-card">
-        <img src="Seasonal Specials.png" alt="Seasonal Specials">
-        <h3>Seasonal Specials</h3>
-        <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
-      </div>
-
+    <!-- Follow, Dine, Show – Save 25% -->
+    <div class="event-card">
+      <img src="25percentoff.jpeg" alt="Follow Dine Show Save 25%">
+      <h3>Follow, Dine, Show – Save 25%</h3>
+      <p><strong>The perfect gift to spend all year round!
+      These can be purchased and redeemed throughout all of our Country Inns sites!
+      Terms & Conditions apply!</strong></p>
+      <a href="promo-25.html" class="btn">Learn More</a>
     </div>
+
+    <!-- Seasonal Specials -->
+    <div class="event-card">
+      <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
+      <h3>Seasonal Specials</h3>
+      <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
+    </div>
+
+    <!-- Sunday Roasts -->
+    <div class="event-card">
+      <img src="Roast Pork.jpg?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
+      <h3>Sunday Roasts</h3>
+      <p><strong>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</strong></p>
+    </div>
+
+    <!-- Dog Friendly -->
+    <div class="event-card">
+      <img src="Dog Friendly.jpg?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
+      <h3>Dog Friendly</h3>
+      <p><strong>All our pubs are dog friendly, so bring your four legged friend(s) along.</strong></p>
+    </div>
+
+    <!-- Pouring Quality -->
+    <div class="event-card">
+      <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
+      <h3>Pouring Quality</h3>
+      <p><strong>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</strong></p>
+    </div>
+
+    <!-- Proudly Local -->
+    <div class="event-card">
+      <img src="proudly local.png" alt="Proudly Local">
+      <h3>Proudly Local</h3>
+      <p><strong>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</strong></p>
+      <a href="local.html" class="btn">Discover Our Local Partners</a>
+    </div>
+
+  </div>
+</section>
   </section>
 
   <!-- ABOUT SECTION -->
