--- a/home.html
+++ b/home.html
@@ -55,10 +55,10 @@
     }
 
     .promo-banner em {
-      font-weight: normal;
-      font-size: 0.95rem;
       display: block;
       margin-top: 4px;
+      font-size: 0.95rem;
+      font-weight: normal;
     }
 
     .promo-btn {
@@ -209,6 +209,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <!-- HEADER -->
@@ -217,7 +218,7 @@
     <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
-  <!-- PROMO BANNER (ALWAYS VISIBLE) -->
+  <!-- PROMO BANNER -->
   <div class="promo-banner">
     Keep your receipt from any visit and enjoy <strong>25% OFF your food bill</strong> on your next visit
     <a href="promo-25.html" class="promo-btn">Learn More</a>
@@ -226,60 +227,100 @@
 
   <!-- FEATURED SECTION -->
   <section>
-    <!-- Featured at Every Pub -->
-<section>
-  <h2>Featured at Every Pub</h2>
+    <h2>Featured at Every Pub</h2>
 
-  <div class="events-scroll">
+    <div class="events-scroll">
 
-    <!-- Follow, Dine, Show – Save 25% -->
-    <div class="event-card">
-      <img src="25percentoff.jpeg" alt="Follow Dine Show Save 25%">
-      <h3>Follow, Dine, Show – Save 25%</h3>
-      <p><strong>The perfect gift to spend all year round!
-      These can be purchased and redeemed throughout all of our Country Inns sites!
-      Terms & Conditions apply!</strong></p>
-      <a href="promo-25.html" class="btn">Learn More</a>
+      <div class="event-card">
+        <img src="Country Inns Voucher.jpg" alt="Vouchers">
+        <h3>Gift Vouchers</h3>
+        <p><strong>
+          The perfect gift to spend all year round!
+          These can be purchased and redeemedthroughout all of our Country Inns sites!
+          Terms & Conditions apply!
+        </strong></p>
+        <a href="promo-25.html" class="btn">Learn More</a>
+      </div>
+
+      <div class="event-card">
+        <img src="Seasonal Specials.png" alt="Seasonal Specials">
+        <h3>Seasonal Specials</h3>
+        <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
+      </div>
+
+      <div class="event-card">
+        <img src="Roast Pork.jpg" alt="Sunday Roast">
+        <h3>Sunday Roasts</h3>
+        <p><strong>Traditional home-cooked roasts with all the trimmings.</strong></p>
+      </div>
+
+      <div class="event-card">
+        <img src="Dog Friendly.jpg" alt="Dog Friendly">
+        <h3>Dog Friendly</h3>
+        <p><strong>All our pubs are dog friendly – bring your four-legged friends.</strong></p>
+      </div>
+
+      <div class="event-card">
+        <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
+        <h3>Pouring Quality</h3>
+        <p><strong>Local ales and carefully selected wines across all pubs.</strong></p>
+      </div>
+
+      <div class="event-card">
+        <img src="proudly local.png" alt="Proudly Local">
+        <h3>Proudly Local</h3>
+        <p><strong>Supporting local producers throughout the New Forest.</strong></p>
+        <a href="local.html" class="btn">Discover Our Partners</a>
+      </div>
+
     </div>
+  </section>
 
-    <!-- Seasonal Specials -->
-    <div class="event-card">
-      <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
-      <h3>Seasonal Specials</h3>
-      <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
+  <!-- PUB GRID -->
+  <section>
+    <h2>Explore Our Pub Family</h2>
+
+    <div class="pubs-grid">
+      <a class="pub-tile" href="boldforester.html">
+        <img src="bold-forester-images/Restaurant Images/boldforestermain.jpg" alt="The Bold Forester">
+        <span>The Bold Forester</span>
+      </a>
+
+      <a class="pub-tile" href="lambinn.html">
+        <img src="Lamb-Inn-images/LambInn.jpg" alt="The Lamb Inn">
+        <span>The Lamb Inn</span>
+      </a>
+
+      <a class="pub-tile" href="royaloak.html">
+        <img src="Royal-Oak-images/The Royal Oak.jpeg" alt="The Royal Oak">
+        <span>The Royal Oak</span>
+      </a>
+
+      <a class="pub-tile" href="woolpack.html">
+        <img src="Woolpack-images/Woolpack.jpg" alt="The Woolpack">
+        <span>The Woolpack</span>
+      </a>
+
+      <a class="pub-tile" href="fightingcocks.html">
+        <img src="Fighting-Cocks-images/fighting-coq-scaled.jpg" alt="The Fighting Cocks">
+        <span>The Fighting Cocks</span>
+      </a>
+
+      <a class="pub-tile" href="trustyservant.html">
+        <img src="Trusty-Servant-images/Trusty.jpg" alt="The Trusty Servant">
+        <span>The Trusty Servant</span>
+      </a>
+
+      <a class="pub-tile" href="newforestinn.html">
+        <img src="New-Forest-Inn-images/NFI.jpg" alt="The New Forest Inn">
+        <span>The New Forest Inn</span>
+      </a>
+
+      <a class="pub-tile" href="find-us.html">
+        <img src="find us.png" alt="Find our nearest pub">
+        <span>Find Our Nearest Pub</span>
+      </a>
     </div>
-
-    <!-- Sunday Roasts -->
-    <div class="event-card">
-      <img src="Roast Pork.jpg?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
-      <h3>Sunday Roasts</h3>
-      <p><strong>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</strong></p>
-    </div>
-
-    <!-- Dog Friendly -->
-    <div class="event-card">
-      <img src="Dog Friendly.jpg?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
-      <h3>Dog Friendly</h3>
-      <p><strong>All our pubs are dog friendly, so bring your four legged friend(s) along.</strong></p>
-    </div>
-
-    <!-- Pouring Quality -->
-    <div class="event-card">
-      <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
-      <h3>Pouring Quality</h3>
-      <p><strong>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</strong></p>
-    </div>
-
-    <!-- Proudly Local -->
-    <div class="event-card">
-      <img src="proudly local.png" alt="Proudly Local">
-      <h3>Proudly Local</h3>
-      <p><strong>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</strong></p>
-      <a href="local.html" class="btn">Discover Our Local Partners</a>
-    </div>
-
-  </div>
-</section>
   </section>
 
   <!-- ABOUT SECTION -->
