--- a/home.html
+++ b/home.html
@@ -239,7 +239,7 @@
           These can be purchased and redeemedthroughout all of our Country Inns sites!
           Terms & Conditions apply!
         </strong></p>
-        <a href="Voucher.html" class="btn">Learn More</a>
+        <a href="Voucher T&Cs.png" class="btn">Learn More</a>
       </div>
 
       <div class="event-card">
