--- a/Voucher.html
+++ b/Voucher.html
@@ -3,34 +3,68 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Follow, Dine, Show – Save 25%</title>
+
+  <title>Voucher Terms & Conditions | Country Inns</title>
+
   <style>
     :root { --bg:#0f2f1f }
-    html,body { height:100%; margin:0 }
+
+    html, body {
+      height:100%;
+      margin:0;
+    }
+
     body {
-      background: radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 8%), var(--bg);
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      background: radial-gradient(
+        circle at 10% 10%,
+        rgba(255,255,255,0.02),
+        transparent 8%
+      ), var(--bg);
+
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
       padding:24px;
+
       font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
       color:#fff;
     }
+
     .card {
-      width:100%; max-width:900px; aspect-ratio:2/3;
+      width:100%;
+      max-width:900px;
+      aspect-ratio:2/3;
       background:transparent;
-      display:flex; align-items:center; justify-content:center;
+
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
       box-shadow:0 8px 30px rgba(0,0,0,0.45);
-      border-radius:8px; overflow:hidden;
+      border-radius:8px;
+      overflow:hidden;
     }
+
     .card img {
-      width:100%; height:100%; object-fit:cover;
-      display:block; user-select:none;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+      user-select:none;
     }
-    @media (max-width:420px){
-      .card { max-width:420px; aspect-ratio:3/4 }
+
+    @media (max-width:420px) {
+      .card {
+        max-width:420px;
+        aspect-ratio:3/4;
+      }
     }
+
     .buttons {
       margin-top:20px;
     }
+
     .buttons a {
       text-decoration:none;
       color:#fff;
@@ -39,16 +73,21 @@
       border-radius:6px;
       transition:background 0.3s;
     }
+
     .buttons a:hover {
       background:#3d7f55;
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Poster -->
+  <!-- Voucher T&Cs Poster -->
   <div class="card">
-    <img src="Trusty Copy jan Feb Mar Promo.png" alt="25% Off Promotion Poster">
+    <img
+      src="Voucher T&Cs.png"
+      alt="Voucher Terms and Conditions valid across all Country Inns pubs"
+    >
   </div>
 
   <!-- Back Button -->
