--- a/promo-25.html
+++ b/promo-25.html
@@ -4,33 +4,68 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Follow, Dine, Show – Save 25%</title>
+
   <style>
     :root { --bg:#0f2f1f }
-    html,body { height:100%; margin:0 }
+
+    html, body {
+      height:100%;
+      margin:0;
+    }
+
     body {
-      background: radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 8%), var(--bg);
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      background: radial-gradient(
+        circle at 10% 10%,
+        rgba(255,255,255,0.02),
+        transparent 8%
+      ), var(--bg);
+
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      /* ❌ removed justify-content:center */
       padding:24px;
+
       font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
       color:#fff;
+
+      overflow-y:auto; /* ✅ allow scrolling */
     }
+
     .card {
-      width:100%; max-width:900px; aspect-ratio:2/3;
-      background:transparent;
-      display:flex; align-items:center; justify-content:center;
+      width:100%;
+      max-width:900px;
+      aspect-ratio:2/3;
+      margin-top:12px;
+
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
       box-shadow:0 8px 30px rgba(0,0,0,0.45);
-      border-radius:8px; overflow:hidden;
+      border-radius:8px;
+      overflow:hidden;
     }
+
     .card img {
-      width:100%; height:100%; object-fit:cover;
-      display:block; user-select:none;
+      width:100%;
+      height:100%;
+      object-fit:contain; /* ✅ ensures full poster visible */
+      display:block;
+      user-select:none;
     }
-    @media (max-width:420px){
-      .card { max-width:420px; aspect-ratio:3/4 }
+
+    @media (max-width:420px) {
+      .card {
+        max-width:420px;
+        aspect-ratio:3/4;
+      }
     }
+
     .buttons {
-      margin-top:20px;
+      margin:24px 0 12px;
     }
+
     .buttons a {
       text-decoration:none;
       color:#fff;
@@ -38,17 +73,23 @@
       padding:10px 18px;
       border-radius:6px;
       transition:background 0.3s;
+      display:inline-block;
     }
+
     .buttons a:hover {
       background:#3d7f55;
     }
   </style>
 </head>
+
 <body>
 
   <!-- Poster -->
   <div class="card">
-    <img src="Trusty Copy jan Feb Mar Promo.png" alt="25% Off Promotion Poster">
+    <img
+      src="Trusty Copy jan Feb Mar Promo.png"
+      alt="25% Off Promotion – valid across all Country Inns pubs"
+    >
   </div>
 
   <!-- Back Button -->
