--- a/Voucher.html
+++ b/Voucher.html
@@ -24,18 +24,20 @@
       display:flex;
       flex-direction:column;
       align-items:center;
-      justify-content:center;
+      /* ❌ removed justify-content:center */
       padding:24px;
 
       font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
       color:#fff;
+
+      overflow-y:auto; /* ✅ allow scrolling */
     }
 
     .card {
       width:100%;
       max-width:900px;
       aspect-ratio:2/3;
-      background:transparent;
+      margin-top:12px;
 
       display:flex;
       align-items:center;
@@ -49,7 +51,7 @@
     .card img {
       width:100%;
       height:100%;
-      object-fit:cover;
+      object-fit:contain; /* ✅ full poster always visible */
       display:block;
       user-select:none;
     }
@@ -62,7 +64,7 @@
     }
 
     .buttons {
-      margin-top:20px;
+      margin:24px 0 12px;
     }
 
     .buttons a {
@@ -72,6 +74,7 @@
       padding:10px 18px;
       border-radius:6px;
       transition:background 0.3s;
+      display:inline-block;
     }
 
     .buttons a:hover {
