--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -114,7 +114,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="Cake Deal.jpg" alt="Coffee and Cake for £5">
+        <img src="Cake Deal 2.jpg" alt="Coffee and Cake for £5">
         <h3>Coffee and Cake for £6</h3>
         <p>Just £6 when you order a slice of cake and a hot beverage.</p>
       </div>
