--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Promotions</title>
+  <title>The Royal Oak – Promotions</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -102,6 +102,42 @@
         <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
         <a href="promo-25.html"></a>
       </div>
+      <div class="card">
+  <img src="ROB burger-and-pint-monday.jpeg" alt="Burger & Pint Monday">
+  
+  <h3>🍔 BURGER & PINT MONDAY 🍺</h3>
+
+  <p>
+    Mondays at <strong>The Royal Oak</strong> are all about great burgers and a well-earned drink!
+  </p>
+
+  <p>
+    Enjoy <strong>any burger from our main menu</strong> and receive a
+    <strong>complimentary drink</strong> of your choice.
+  </p>
+
+  <p>
+    Choose from <strong>Grolsch, Cornish Orchards, Real Ale</strong> or a
+    <strong>draught soft drink</strong>.
+  </p>
+
+  <p>
+    The perfect way to beat the Monday blues – delicious food, refreshing drinks,
+    and great company. 🍔✨
+  </p>
+
+  <p>
+    Available <strong>every Monday</strong> at The Royal Oak.
+  </p>
+
+  <p>
+    Book your table now at<br>
+    <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      https://www.theroyaloakbeaulieu.co.uk/
+    </a><br>
+    or call <strong>01590 612228</strong>.
+  </p>
+    </div>
       <div class="card">
         <img src="pizza-wednesday.jpeg" alt="Pizza Wednesdays">
         <h3>🍕 WEDNESDAY DEAL! 🍕</h3>
