--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -108,22 +108,19 @@
   <h3>🍔 BURGER & PINT MONDAY 🍺</h3>
 
   <p>
-    Mondays at <strong>The Royal Oak</strong> are all about great burgers and a well-earned drink!
+    On mondays at <strong>The Royal Oak</strong>
   </p>
-
   <p>
     Enjoy <strong>any burger from our main menu</strong> and receive a
     <strong>complimentary drink</strong> of your choice.
   </p>
-
   <p>
     Choose from <strong>Grolsch, Cornish Orchards, Real Ale</strong> or a
     <strong>draught soft drink</strong>.
   </p>
-
   <p>
     The perfect way to beat the Monday blues – delicious food, refreshing drinks,
-    and great company. 🍔✨
+    and great company.
   </p>
 
   <p>
