--- a/Royal-Oak-images/Events-Promotions/promotions.html
+++ b/Royal-Oak-images/Events-Promotions/promotions.html
@@ -105,7 +105,7 @@
       <div class="card">
   <img src="ROB burger-and-pint-monday.jpeg" alt="Burger & Pint Monday">
   
-  <h3>🍔 BURGER & PINT MONDAY 🍺</h3>
+  <h3>🍔BURGER & PINT MONDAY!🍺</h3>
 
   <p>
     On mondays at <strong>The Royal Oak</strong>
@@ -137,7 +137,7 @@
     </div>
       <div class="card">
         <img src="pizza-wednesday.jpeg" alt="Pizza Wednesdays">
-        <h3>🍕 WEDNESDAY DEAL! 🍕</h3>
+        <h3>🍕 PIZZA WEDNESDAY! 🍕</h3>
         </p>Every Wednesday at The Royal Oak, it’s BUY ONE GET ONE FREE on ALL PIZZAS</strong>.
         So bring a friend, bring your appetite, and enjoy double the pizza for the price of one.
         Perfect midweek treat, don’t miss it! 🍽️✨
@@ -152,7 +152,7 @@
       </div>
       <div class="card">
         <img src="fish-fryday.jpeg" alt="Fish & Chips Fridays">
-        <h3>🐟 FRIDAY DEAL! 🐟</h3>
+        <h3>🐟 FISH FRY-DAY! 🐟</h3>
         </p>Every Friday at The Royal Oak, you can get 2 fish & chips for JUST £30!</strong>.
         Whether you’re coming in after a walk in the New Forest or chilling in the pub garden, it’s a proper reason to treat yourself (and a mate).
 
