--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Trusty Servant – Promotions</title>
+
   <link rel="stylesheet" href="style.css">
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -31,6 +33,7 @@
       align-items: center;
       gap: 1.5rem;
       margin: 2rem 0;
+      padding: 0 1rem;
     }
 
     .card {
@@ -39,7 +42,6 @@
       padding: 1rem;
       max-width: 400px;
       width: 100%;
-      text-align: center;
       transition: transform 0.2s ease;
     }
 
@@ -62,7 +64,11 @@
     .card p {
       font-size: 0.95rem;
       line-height: 1.5;
-      color: #f4f4f4;
+    }
+
+    .card a {
+      color: #e6d8b5;
+      text-decoration: underline;
     }
 
     .buttons {
@@ -71,6 +77,7 @@
       gap: 1rem;
       margin: 2rem auto;
       max-width: 300px;
+      padding-bottom: 2rem;
     }
 
     .buttons a {
@@ -89,69 +96,106 @@
     }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>Promotions</h1>
-  </header>
 
-  <main>
-    <div class="card-grid">
-      <div class="card">
-        <img src="TRUSTY DIRECT.jpg" alt="Book Direct">
-        <h3>Book Direct</h3>
-        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
-          Book your room(s) now at<br>
-          <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757513224749" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            https://www.thetrustyservant.co.uk/
-          </a><br>
-          or call <strong>02380 812137</strong>.
-        </p>
-      </div>
-      <div class="card-grid">
-      <!-- 25% Off Food Promo Card -->
-      <div class="card">
-        <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
-        <h3>Follow, Dine, Show – Save 25%</h3>
-        <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
-        <a href="promo-25.html"></a>
-      </div>
-      <div class="card">
-    <img src="Wine Wednesdays.jpg" alt="The Trusty Servant - Wine Wednesday poster">
-    <h3>Wine Wednesdays</h3>
+<header>
+  <h1>Promotions</h1>
+</header>
 
-    <p>
-      Buy 2 large glasses of our wine of the month and get the rest of the bottle free!<br>
-      <em>Exclusively on Wednesdays!</em>
-    </p>
-      <br>Book your table now at<br>
-     <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            https://www.thetrustyservant.co.uk/
-          </a><br>
-       or call <strong>02380 812137</strong>.
-      </a>
-    </p>
+<main>
+  <div class="card-grid">
+
+    <!-- Book Direct -->
+    <div class="card">
+      <img src="TRUSTY DIRECT.jpg" alt="Book Direct">
+      <h3>Book Direct</h3>
+      <p>
+        Book direct quoting <strong>DIRECT10</strong> to get <strong>10% OFF</strong> when reserving a room with us.
+      </p>
+      <p>
+        Book your room now at<br>
+        <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757513224749" target="_blank">
+          https://www.thetrustyservant.co.uk/
+        </a><br>
+        or call <strong>02380 812137</strong>
+      </p>
+    </div>
+
+    <!-- 25% Off Food -->
+    <div class="card">
+      <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
+      <h3>Follow, Dine, Show – Save 25%</h3>
+      <p>
+        Keep your receipt from any visit during <strong>December–March</strong> and enjoy
+        <strong>25% off your food bill</strong> on your next visit.<br>
+        <em>Monday–Friday only.</em>
+      </p>
+    </div>
+
+    <!-- Pizza Mondays -->
+    <div class="card">
+      <img src="BOGOF-Pizzas-1.png" alt="The Trusty Servant Pizza Mondays">
+      <h3>Pizza Mondays</h3>
+      <p>
+        Buy <strong>ANY 2 pizzas</strong> for the price of <strong>1</strong>!<br>
+        <em>Exclusively on Mondays.</em>
+      </p>
+      <p>
+        Book your table now at<br>
+        <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank">
+          https://www.thetrustyservant.co.uk/
+        </a><br>
+        or call <strong>02380 812137</strong>
+      </p>
+    </div>
+
+    <!-- 20% Tuesdays -->
+    <div class="card">
+      <img src="Trusty-20-Tuesdays.png" alt="The Trusty Servant 20% Tuesdays Offer">
+      <h3>20% Off Tuesdays</h3>
+      <p>
+        <strong>Tuesdays Social Media Offer</strong><br>
+        Enjoy <strong>20% off your food bill</strong> when you show your server this offer.<br>
+        <em>(Excluding holidays)</em>
+      </p>
+      <p>
+        Available from <strong>08:30am – 21:30pm</strong>
+      </p>
+      <p>
+        Book your table now at<br>
+        <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank">
+          https://www.thetrustyservant.co.uk/
+        </a><br>
+        or call <strong>02380 812137</strong>
+      </p>
+    </div>
+
+    <!-- Wine Wednesdays -->
+    <div class="card">
+      <img src="Wine Wednesdays.jpg" alt="The Trusty Servant Wine Wednesdays">
+      <h3>Wine Wednesdays</h3>
+      <p>
+        Buy <strong>2 large glasses</strong> of our wine of the month and get the rest of the bottle
+        <strong>free</strong>!<br>
+        <em>Exclusively on Wednesdays.</em>
+      </p>
+      <p>
+        Book your table now at<br>
+        <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank">
+          https://www.thetrustyservant.co.uk/
+        </a><br>
+        or call <strong>02380 812137</strong>
+      </p>
+    </div>
+
   </div>
-        <div class="card">
-    <img src="BOGOF-Pizzas-1.png" alt="The Trusty Servant Pizza Mondays">
-    <h3>Pizza Mondays</h3>
-
-    <p>
-      Buy ANY 2 Pizzas for the price of 1!<br>
-      <em>Exclusively on Mondays!</em>
-    </p>
-      <br>Book your table now at<br>
-     <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            https://www.thetrustyservant.co.uk/
-          </a><br>
-       or call <strong>02380 812137</strong>.
-      </a>
-    </p>
-  </div>
-</div>
-      
-  </main>
+</main>
 
 <div class="buttons">
   <a href="../../trustyservant.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
+
+</body>
+</html>
