--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -97,7 +97,7 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Crimbo-Quiz-2025.png"
+        <img src="NFI-christmas-quiz.jpg"
         <h3>🧠 Quiz Night at The New Forest Inn</h3>
         <p>
           Join us for another amazing Quiz Night on Friday 19th December! 
